--- a/css/style.css
+++ b/css/style.css
@@ -1557,3 +1557,38 @@ input:focus:-ms-input-placeholder {
 .btn-theanks, .btn-erorr {
   display: none;
 }
+
+/* Form loading class */
+
+.form-img-loading {
+  position: relative;
+  text-align: center;
+}
+
+.form-img-loading:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url('../img/loading.gif');
+  background-color: rgb(192 192 192 / 61%);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  border-radius: 50px;
+  opacity: 0;
+  visibility: hidden;
+  z-index: -10;
+}
+
+.form-img-loading._sending-js:before {
+  opacity: 1;
+  visibility: visible;
+  z-index: 10;
+}
+
+._error-js {
+  border-bottom: 3px solid red;
+}
