--- a/css/style.css
+++ b/css/style.css
@@ -922,7 +922,7 @@ section .owl-dots .owl-dot.active span {
 }
 
 .portfolio button.owl-prev, .portfolio button.owl-next {
-  background-color: none;
+  background: none;
   width: 20px;
   height: 20px;
   box-shadow: none;
